# ai-image-decoder

./: .env.example  .gitattributes  .gitignore  API_TEST_RESULTS.md  CLIP_SERVICE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  METADATA_GUIDE.md  NEXT_STEPS.md  PROJECT_PLAN.md  README.md  RELEASE_NOTES_v0.1.0-image-explorer-enabled.md  RELEASE_NOTES_v0.1.0-ingestion-enabled.md  RESET_AND_SCAN.md  TESTING_GUIDE.md  UI_TEST_PLAN.md  USAGE_GUIDE.md  WEB_UI_SUMMARY.md  bump_version.sh  test_clip.sh
scripts/: FEATURES_TEST_README.md  NEW_FEATURES_TEST_README.md  PUPPETEER_BEST_PRACTICES.md  README.md  TEST_HARNESS_REPORT.md  TEST_RESULTS.md  kill-server.sh  package-lock.json  package.json  quick-test.sh  reset-db.sh  test-collection-creation.js  test-new-features-playwright.js  test-prompt-filters-playwright.js  test-prompt-search-playwright.js  test-prompt-searches.js  test-scan-directory.js  test-ui-features-playwright.js  test-ui-playwright.js  test-ui.js
src/: lib.rs  main.rs
src/api/: clip.rs  collections.rs  export.rs  images.rs  mod.rs  prompts.rs  search.rs  server.rs  stats.rs  tags.rs  version_check.rs
src/config/: mod.rs
src/extraction/: comfyui.rs  jpeg.rs  mod.rs  normalizer.rs  parser.rs  png.rs  tag_extractor.rs  webp.rs
src/ingestion/: mod.rs  scanner.rs  service.rs
src/services/: clip.rs  mod.rs
src/storage/: collection_repo.rs  image_repo.rs  metadata_repo.rs  mod.rs  prompt_repo.rs  tag_repo.rs
src/utils/: hash.rs  mod.rs  thumbnail.rs
static/: app.js  index.html  styles.css
