[package]
name = "ai-image-decoder"
version = "0.1.0-alpha"
edition = "2021"
authors = ["Your Name"]
description = "A self-contained tool for extracting and managing prompts from AI-generated images"
license = "MIT"

[lib]
name = "ai_image_decoder"
path = "src/lib.rs"

[[bin]]
name = "ai-image-decoder"
path = "src/main.rs"

[dependencies]
# Web framework
actix-web = "4.5"
actix-files = "0.6"
actix-cors = "0.7"
actix-rt = "2.9"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# Image processing
image = "0.24"
png = "0.17"
jpeg-decoder = "0.3"
kamadak-exif = "0.6"

# File system
walkdir = "2.4"

# Utilities
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Configuration
dotenv = "0.15"
config = "0.14"

# Lazy static
once_cell = "1.19"

# HTTP client for version checking
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
# Testing
tempfile = "3.9"

